Implemented slider with swipes

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body class="page__body">
-    <header class="page__header header">
+    <header class="page__header header" hidden>
       <div class="header__backgraund"></div>
 
       <div class="container">
@@ -179,7 +179,7 @@
     </div>
 
     <main>
-      <section 
+      <section hidden 
         class="page__actual-events actual-events" 
         id="actual-events"
       >
@@ -277,52 +277,109 @@
       </section>
 
       <section class="page__gallery gallery" id="gallery">
-        <div class="container">
+        <div class="container ">
           <h2 class="page__section-title gallery__title">
             Галерея
           </h2>
           
-          <div class="gallery__images">
-            <div class="grid">
-              <div class="grid__item grid__item--desktop-1-4">
-                <img 
-                  src="./images/photo/gallery/1.jpg" 
-                  alt="картина" 
-                  class="gallery__image"
-                >
-              </div>
-  
-              <div class="grid__item grid__item--desktop-5-12">
-                <img 
-                  src="./images/photo/gallery/2.jpg" 
-                  alt="картина" 
-                  class="gallery__image"
-                >
-              </div>
-  
-              <div class="grid__item grid__item--desktop-1-8">
-                <img 
-                  src="./images/photo/gallery/3.jpg" 
-                  alt="картина" 
-                  class="gallery__image"
-                >
-              </div>
-  
-              <div class="grid__item grid__item--desktop-9-12">
-                <img 
-                  src="./images/photo/gallery/4.jpg" 
-                  alt="картина" 
-                  class="gallery__image"
-                >
-              </div>
+          <div class="gallery__images carousel">
+            <div class="grid carousel__container">
+              <img 
+                src="./images/photo/gallery/1.jpg" 
+                alt="картина" 
+                class="
+                  gallery__image
+                  grid__item
+                  grid__item--desktop-1-4
+                  carousel__item
+                  carousel__item--1
+                "
+                data-scroll-point="3"
+              >
+
+              <img 
+                src="./images/photo/gallery/2.jpg" 
+                alt="картина" 
+                class="
+                  gallery__image
+                  grid__item
+                  grid__item--desktop-5-12
+                  carousel__item
+                  carousel__item--2
+                "
+                data-scroll-point="4"
+              >
+
+              <img 
+                src="./images/photo/gallery/3.jpg" 
+                alt="картина" 
+                class="
+                  gallery__image
+                  grid__item
+                  grid__item--desktop-1-8
+                  carousel__item
+                  carousel__item--3
+                "
+                data-scroll-point="0"
+              >
+
+              <img 
+                src="./images/photo/gallery/4.jpg" 
+                alt="картина" 
+                class="
+                  gallery__image
+                  grid__item
+                  grid__item--desktop-9-12
+                  carousel__item
+                  carousel__item--4
+                "
+                data-scroll-point="1"
+              >
+
+              <img
+                class="carousel__item carousel__item--5"
+                src="./images/photo/gallery/5.jpg" 
+                alt="картина"
+                data-scroll-point="2"
+              >
             </div>
           </div>
 
           <div class="gallery__scroll scroll">
-            <div class="scroll__point scroll__point--active"></div>
-            <div class="scroll__point"></div>
-            <div class="scroll__point"></div>
-            <div class="scroll__point"></div>
+            <div class="scroll__point-container">
+              <div
+                class="scroll__point scroll__point--active"
+                data-scroll-point="0" 
+              ></div>
+            </div>
+
+            <div class="scroll__point-container">
+              <div
+                class="scroll__point"
+                data-scroll-point="1"
+              ></div>
+            </div>
+
+            <div class="scroll__point-container">
+              <div
+                class="scroll__point"
+                data-scroll-point="2"
+              ></div>
+            </div>
+
+            <div class="scroll__point-container">
+              <div
+                class="scroll__point"
+                data-scroll-point="3"
+              ></div>
+            </div>
+
+            <div  class="scroll__point-container">
+              <div
+                class="scroll__point"
+                data-scroll-point="4"
+              ></div>
+            </div>
           </div>
         </div>
       </section>
@@ -630,5 +687,6 @@
     </footer> 
 
     <script type="text/javascript" src="scripts/main.js"></script>
+    <!-- <script type="text/javascript" src="scripts/carousel.js"></script> -->
   </body>
 </html>
