Deleted hidden attributes from index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body class="page__body">
-    <header class="page__header header" hidden>
+    <header class="page__header header">
       <div class="header__backgraund"></div>
 
       <div class="container">
@@ -179,7 +179,7 @@
     </div>
 
     <main>
-      <section hidden 
+      <section 
         class="page__actual-events actual-events" 
         id="actual-events"
       >
