Contacts and footer sections was added

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
-  <link>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Національний художній музей</title>
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   </head>
   <body class="page__body">
-    <header class="page__header header">
+    <header class="page__header header" id="header">
       <div class="header__menu menu">
         <div class="menu__icon-box">
           <a href="#nav-menu" class="menu__icon-link">
@@ -75,19 +75,19 @@
               </p>
 
               <p class="menu__working-hours">
-                <bold>12:00 — 20:00</bold> середа
+                <strong>12:00 — 20:00</strong> середа
                 <br>
-                <bold>12:00 — 20:00</bold> четвер
+                <strong>12:00 — 20:00</strong> четвер
                 <br>
-                <bold>12:00 — 20:00</bold> п’ятниця
+                <strong>12:00 — 20:00</strong> п’ятниця
                 <br>
-                <bold>11:00 — 19:00</bold> субота
+                <strong>11:00 — 19:00</strong> субота
                 <br>
-                <bold>11:00 — 19:00</bold> неділя
+                <strong>11:00 — 19:00</strong> неділя
               </p>
 
               <p class="menu__weekends">
-                <bold>Вихідні:</bold> понеділок, вівторок. <br>
+                <strong>Вихідні:</strong> понеділок, вівторок. <br>
                 Каса припиняє роботу за 1 годину
                 до закриття музею
               </p>
@@ -295,9 +295,151 @@
           </div>
         </div>
       </section>
+
+      <section class="contact-form">
+        <form
+          action="#"
+          method="post"
+          class="contact-form__form"
+        >
+          <h3 class="contact-form__title">
+            Підписка
+          </h3>
+          <h2 class="contact-form__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин
+          </h2>
+
+          <div class="contact-form__container">
+            <input
+              placeholder="E-mail"
+              type="email"
+              class="prevent-refresh contact-form__input"
+              required
+            >
+
+            <button
+              type="submit"
+              class="contact-form__button"
+            >
+            </button>
+          </div>
+      </section>
     </main>
 
-    <footer>
+    <footer class="page__section footer">
+      <div class="grid footer__grid">
+        <div class="footer__logo-container">
+          <a href="#header" class="footer__logo-link">
+            <img
+              src="./images/namu-logo.png"
+              alt="NAMU logo"
+              class="footer__logo"
+            >
+          </a>
+
+          <div class="footer__social-box">
+            <img
+              src="./images/facebook-icon.png"
+              alt="Facebook icon"
+              class="footer__social-icon"
+            >
+            <img
+              src="./images/insta-icon.png"
+              alt="Instagram icon"
+              class="footer__social-icon"
+            >
+          </div>
+        </div>
+
+        <div class="footer__schedule">
+          <p class="footer__text">
+            Графік роботи
+          </p>
+
+          <p class="footer__text">
+            <strong>12:00 — 20:00</strong> середа
+            <br>
+            <strong>12:00 — 20:00</strong> четвер
+            <br>
+            <strong>12:00 — 20:00</strong> п’ятниця
+            <br>
+            <strong>11:00 — 19:00</strong> субота
+            <br>
+            <strong>11:00 — 19:00</strong> неділя
+          </p>
+
+          <p class="footer__text">
+            <strong>Вихідні:</strong> понеділок, вівторок. <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__contacts">
+          <p class="footer__text">
+            Контакти:
+          </p>
+
+          <div class="footer__text">
+            <a
+              href="https://goo.gl/maps/SaEiiosAHEbuL5n99"
+              class="footer__adress"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a
+              href="tel:+380442781357"
+              class="footer__phone"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+            <p class="footer__fax">
+              факс +38 (044) 278-74-54
+            </p>
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__email"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__container">
+          <ul class="footer__list">
+            <li class="footer__item footer__item--1">
+              <a href="#" class="footer__link">
+                Галерея
+              </a>
+            </li>
+            <li class="footer__item footer__item--2">
+              <a href="#" class="footer__link">
+                Виставки та події
+              </a>
+            </li>
+            <li class="footer__item footer__item--3">
+              <a href="#" class="footer__link">
+                Про нас
+              </a>
+            </li>
+            <li class="footer__item footer__item--4">
+              <a href="#" class="footer__link">
+                Квитки
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyrights">
+          <p class="footer__copyrights-text">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+          <p class="footer__copyrights-text">
+            Designed by Zhyriada Marina
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
