--- a/src/index.html
+++ b/src/index.html
@@ -63,63 +63,64 @@
     </header>
 
     <nav class="menu" id="menu">
-      <div class="container">
-        <div class="menu__content">
+      <div class="menu__green">
+        <div class="container">
+          <div class="menu__content">
 
-          <div class="menu__nav">
-            <a href="#" class="menu__icon icon icon--cross"></a>
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a class="menu__link" href="#galery">Галерея</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#subscription">Про Нас</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#events">Виставки та події</a>
-              </li>
-              <li class="menu__item">
-                <a class="menu__link" href="#contacts">Контакти</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="menu__line"></div>
-
-          <div class="schedule schedule--menu">
-            <div class="schedule__block">
-              <div class="schedule__name">
-                Графік роботи
-              </div>
-
-              <ul class="schedule__list">
-                <li class="schedule__days">
-                  <span class="schedule__time">12:00 — 20:00</span> середа
+            <div class="menu__nav">
+              <a href="#" class="menu__icon icon icon--cross"></a>
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a class="menu__link" href="#galery">Галерея</a>
                 </li>
-                <li class="schedule__days">
-                  <span class="schedule__time">12:00 — 20:00</span> четвер
+                <li class="menu__item">
+                  <a class="menu__link" href="#subscription">Про Нас</a>
                 </li>
-                <li class="schedule__days">
-                  <span class="schedule__time">12:00 — 20:00</span> п’ятниця
+                <li class="menu__item">
+                  <a class="menu__link" href="#events">Виставки та події</a>
                 </li>
-                <li class="schedule__days">
-                  <span class="schedule__time">11:00 — 19:00</span> субота
-                </li>
-                <li class="schedule__days">
-                  <span class="schedule__time">11:00 — 19:00</span> неділя
+                <li class="menu__item">
+                  <a class="menu__link" href="#contacts">Контакти</a>
                 </li>
               </ul>
             </div>
 
-            <p class="schedule__weekends schedule__weekends--menu">
-              <span class="schedule__time">Вихідні:</span> понеділок, вівторок
-              <br>
-              Каса припиняє роботу за 1 годину
-              до закриття музею
-            </p>
+            <div class="menu__line"></div>
 
+            <div class="schedule schedule--menu">
+              <div class="schedule__block">
+                <div class="schedule__name">
+                  Графік роботи
+                </div>
+
+                <ul class="schedule__list">
+                  <li class="schedule__days">
+                    <span class="schedule__time">12:00 — 20:00</span> середа
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">12:00 — 20:00</span> четвер
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">12:00 — 20:00</span> п’ятниця
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">11:00 — 19:00</span> субота
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">11:00 — 19:00</span> неділя
+                  </li>
+                </ul>
+              </div>
+
+              <p class="schedule__weekends schedule__weekends--menu">
+                <span class="schedule__time">Вихідні:</span> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+
+            </div>
           </div>
-
         </div>
       </div>
     </nav>
@@ -433,7 +434,7 @@
 
         <div class="footer__copyright">
           <div class="footer__copyright-item">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © 2022. All Rights Reserved.
           </div>
           <div class="footer__copyright-item">
             Designed by Zhyriada Marina
