--- a/src/index.html
+++ b/src/index.html
@@ -36,38 +36,42 @@
           </a>
         </div>
 
+        <div class="page__cover"></div>
+
         <div class="menu__container" id="nav-menu">
           <nav class="menu__grid grid">
-            <a href="#" class="menu__close-link">
-              <img
-                src="./images/menu-close-icon.png"
-                alt="Menu close icon"
-                class="menu__close-icon"
-              >
-            </a>
+            <div class="menu__grid-item">
+              <a href="#" class="menu__close-link">
+                <img
+                  src="./images/menu-close-icon.png"
+                  alt="Menu close icon"
+                  class="menu__close-icon"
+                >
+              </a>
 
-            <ul class="menu__list">
-              <li class="menu__item menu__item--1">
-                <a href="#" class="menu__link">
-                  Галерея
-                </a>
-              </li>
-              <li class="menu__item menu__item--2">
-                <a href="#" class="menu__link">
-                  Виставки та події
-                </a>
-              </li>
-              <li class="menu__item menu__item--3">
-                <a href="#" class="menu__link">
-                  Про нас
-                </a>
-              </li>
-              <li class="menu__item menu__item--4">
-                <a href="#" class="menu__link">
-                  Контакти
-                </a>
-              </li>
-            </ul>
+              <ul class="menu__list">
+                <li class="menu__item menu__item--1">
+                  <a href="#gallery" class="menu__link">
+                    Галерея
+                  </a>
+                </li>
+                <li class="menu__item menu__item--2">
+                  <a href="#events" class="menu__link">
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="menu__item menu__item--3">
+                  <a href="#contact-form" class="menu__link">
+                    Бути в курсі
+                  </a>
+                </li>
+                <li class="menu__item menu__item--4">
+                  <a href="#contacts" class="menu__link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </div>
 
             <div class="menu__schedule">
               <p class="menu__schedule-title">
@@ -95,6 +99,7 @@
           </nav>
         </div>
       </div>
+
       <div class="header__grid grid">
         <h1 class="header__title">
           Художній музей
@@ -113,13 +118,11 @@
         </a>
 
         <div class="header__image-box">
-          <a href="#" class="header__logo-link">
-            <img
-              src="./images/namu-logo.png"
-              alt="NAMU logo"
-              class="header__logo"
-            >
-          </a>
+          <img
+            src="./images/namu-logo.png"
+            alt="NAMU logo"
+            class="header__logo"
+          >
 
           <img
             src="./images/header-image.jpg"
@@ -213,7 +216,7 @@
         </article>
       </section>
 
-      <section class="page__section gallery">
+      <section class="page__section gallery" id="gallery">
         <div class="grid">
           <h2 class="gallery__title">
             Галерея
@@ -296,7 +299,7 @@
         </div>
       </section>
 
-      <section class="contact-form">
+      <section class="contact-form" id="contact-form">
         <form
           action="#"
           method="post"
@@ -323,10 +326,11 @@
             >
             </button>
           </div>
+        </form>
       </section>
     </main>
 
-    <footer class="page__section footer">
+    <footer class="page__section footer" id="contacts">
       <div class="grid footer__grid">
         <div class="footer__logo-container">
           <a href="#header" class="footer__logo-link">
@@ -338,16 +342,28 @@
           </a>
 
           <div class="footer__social-box">
-            <img
-              src="./images/facebook-icon.png"
-              alt="Facebook icon"
-              class="footer__social-icon"
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              class="footer__social-link"
+              target="_blank"
             >
-            <img
-              src="./images/insta-icon.png"
-              alt="Instagram icon"
-              class="footer__social-icon"
+              <img
+                src="./images/facebook-icon.png"
+                alt="Facebook icon"
+                class="footer__social-icon"
+              >
+            </a>
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="footer__social-link"
+              target="_blank"
             >
+              <img
+                src="./images/insta-icon.png"
+                alt="Instagram icon"
+                class="footer__social-icon"
+              >
+            </a>
           </div>
         </div>
 
@@ -409,22 +425,22 @@
         <div class="footer__container">
           <ul class="footer__list">
             <li class="footer__item footer__item--1">
-              <a href="#" class="footer__link">
+              <a href="#gallery" class="footer__link">
                 Галерея
               </a>
             </li>
             <li class="footer__item footer__item--2">
-              <a href="#" class="footer__link">
+              <a href="#events" class="footer__link">
                 Виставки та події
               </a>
             </li>
             <li class="footer__item footer__item--3">
-              <a href="#" class="footer__link">
-                Про нас
+              <a href="#contact-form" class="footer__link">
+                Бути в курсі
               </a>
             </li>
             <li class="footer__item footer__item--4">
-              <a href="#" class="footer__link">
+              <a href="#tickets" class="footer__link">
                 Квитки
               </a>
             </li>
