Mobile addaptive footer

--- a/src/index.html
+++ b/src/index.html
@@ -420,6 +420,8 @@
               e-mail: info@namu.kiev.ua
             </a>
           </div>
+
+          <a href="#header" class="footer__top-button"></a>
         </div>
 
         <div class="footer__container">
