--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="header__side">
               <div class="header__line"></div>
-              <a class="header__events" href="#">Події</a>
+              <a class="header__events" href="#events">Події</a>
             </div>
           </div>
         </div>
@@ -317,14 +317,21 @@
             <div class="footer__socials">
               <a
                 href="https://ru-ru.facebook.com/namu.museum/"
-                class="footer__facebook"
                 target="_blank"
-              ></a>
+              >
+                <svg class="footer__facebook" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.7198 4.64899C2.7198 5.2538 2.7198 7.9533 2.7198 7.9533H0.302734V11.9938H2.7198V24.0009H7.68498V11.9942H11.0168C11.0168 11.9942 11.3289 10.0568 11.4801 7.93841C11.0465 7.93841 7.70375 7.93841 7.70375 7.93841C7.70375 7.93841 7.70375 5.58776 7.70375 5.17573C7.70375 4.76282 8.24511 4.2074 8.78017 4.2074C9.31423 4.2074 10.4414 4.2074 11.4854 4.2074C11.4854 3.65727 11.4854 1.75647 11.4854 0.000976577C10.0917 0.000976577 8.50612 0.000976577 7.80721 0.000976577C2.59707 0.000697581 2.7198 4.04524 2.7198 4.64899Z">
+                </svg>
+
+              </a>
               <a
                 href="https://www.instagram.com/namu.museum/"
-                class="footer__instagram"
                 target="_blank"
-              ></a>
+              >
+                <svg class="footer__instagram" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z">
+                </svg>
+              </a>
             </div>
           </div>
 
