Added hover and fixed text

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
       <nav class="menu" id="menu">
         <div class="menu__content">
-          <div class="container container--flex">
+          <div class="container container--flex container--mobile-padding">
             <div class="menu__tittle">
               <div class="menu__list">
                 <a
@@ -322,7 +322,7 @@
     </main>
 
     <footer class="footer" id="contact">
-      <div class="container">
+      <div class="container container--mobile-padding">
         <div class="grid grid--mobile">
           <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-1 grid__item--desktop-1-1">
             <div class="footer__links">
@@ -330,13 +330,15 @@
 
               <div class="footer__socials">
                 <a
-                  href="#"
+                  href="https://www.facebook.com/namu.museum/"
                   class="footer__link footer__link--facebook"
+                  target="_blank"
                 >
                 </a>
                 <a
-                  href="#"
+                  href="https://www.instagram.com/namu.museum/"
                   class="footer__link footer__link--instagram"
+                  target="_blank"
                 >
                 </a>
               </div>
@@ -428,7 +430,7 @@
           <div class="grid__item grid__item--mobile-1-2 grid__item--tablet-1-6 grid__item--desktop-1-12">
             <div class="footer__description">
               <div class="footer__description-info">
-                Copyright © 2019. All Rights Reserved.
+                Copyright © 2022. All Rights Reserved.
               </div>
               <div class="footer__description-info">
                 Designed by Zhyriada Marina
