new changes were added

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
     </nav>
 
     <main>
-      <section class="page__section" id="events">
+      <section class="page__section page__section--event" id="events">
         <div class="container">
           <h2 class="page__section-title">
             Актуальні
@@ -191,9 +191,12 @@
                 Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
-
           </div>
+        </div>
+      </section>
 
+      <section class="page__section page__section--lection">
+        <div class="container container--lection">
           <div class="lection">
 
             <img
@@ -221,7 +224,6 @@
             </div>
 
           </div>
-
         </div>
       </section>
 
@@ -421,7 +423,7 @@
               </a>
               <br>
               <a
-                href="tel:+38 (044) 278-74-54"
+                href="tel:+380442787454"
                 class="footer__contacts-infolink"
                 target="_blank"
               >
