Form submitting error was fixed

--- a/src/index.html
+++ b/src/index.html
@@ -315,7 +315,7 @@
 
             <form
             class="last__section-form"
-            id="email"
+            id="contactsForm"
             >
               <input
                 type="email"
@@ -336,7 +336,7 @@
             </form>
 
             <script>
-              const form = document.querySelector('#emailForm');
+              const form = document.querySelector('#contactsForm');
               form.addEventListener('submit', (e) => { e.preventDefault();
               form.reset();
               });
