--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,402 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="uk">
+  <head class="page">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link 
+      rel="shortcut icon" 
+      href="../src/images/NA MU.svg" 
+      type="svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link 
+      rel="preconnect" 
+      href="https://fonts.gstatic.com" 
+      crossorigin="#"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header" id="home">
+      <a href="#" class="header__logo">
+        NA
+        <br>
+        MU
+      </a>
+
+      <div class="header__background">
+        <div class="header__backgroud--content"></div>
+      </div>
+
+      <div class="header__tickets">
+        <div class="header__menu-opener--container">
+          <a href="#menu" class="header__menu-opener"></a>
+        </div>
+
+        <h1 class="header__title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+
+        <div class="header__ticket-box">
+          <a 
+            href="#" 
+            class="header__ticket-box--link"
+            target="_blank"
+          >
+            КВИТКИ
+          </a>
+        </div>
+
+        <div class="header__decoration">
+          ПОДІЇ
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__wraper">
+        <div class="menu__container">
+
+          <div class="menu__menu-closer--container">
+            <a href="#" class="menu__menu-closer"></a>
+          </div>
+
+          <div class="menu__content">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#gallery" class="menu__link">Галерея</a>
+              </li>
+              <li class="menu__item">
+                <a href="#about-us" class="menu__link">Про Нас</a>
+              </li>
+              <li class="menu__item">
+                <a href="#exhibitions" class="menu__link">Виставки та події</a>
+              </li>
+              <li class="menu__item">
+                <a href="#contacts" class="menu__link">Контакти</a>
+              </li>
+            </ul>
+  
+            <div class="menu__decoration"></div>
+  
+            <div class="menu__work-schedule">
+              <h4 class="menu__work-schedule--title">
+                Графік роботи
+              </h4>
+  
+              <div class="menu__work-schedule--container">
+                <div class="menu__work-schedule--time">
+                  <strong>12:00 — 20:00</strong> середа<br> 
+                  <strong>12:00 — 20:00</strong> четвер<br>
+                  <strong>12:00 — 20:00</strong> п’ятниця<br>
+                  <strong>11:00 — 19:00</strong> субота<br>
+                  <strong>11:00 — 19:00</strong> неділя
+                </div>
+  
+                <div class="menu__work-schedule--time">
+                  <strong>Вихідні:</strong> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="events" id="exhibitions">
+        <div class="events__container">
+          <div class="events__content">
+            <h2 class="events__title">
+              Актуальні події
+            </h2>
+
+            <div class="events__block">
+              <div class="events__event">
+                <img
+                  src="../src/images/photos/event_1.jpg"
+                  alt="NAMU"
+                  class="events__event--img"
+                >
+                <div class="events__event--description">
+                  <div class="events__event--date">
+                    26.08-29.11.2019
+                  </div>
+                  <h3 class="events__event--title">
+                    Йду і повертаюсь
+                  </h3>
+                  <div class="events__event--about">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </div>
+                </div>
+              </div>
+
+              <div class="events__event">
+                <img
+                  src="../src/images/photos/event_2.jpg"
+                  alt="NAMU"
+                  class="events__event--img"
+                >
+                <div class="events__event--description">
+                  <div class="events__event--date">
+                    26.08-29.11.2019
+                  </div>
+                  <h3 class="events__event--title">
+                    І спогади і мрії
+                  </h3>
+                  <div class="events__event--about">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__lecture">
+          <img 
+            src="../src/images/photos/lecture.jpg" 
+            alt="NAMU" 
+            class="events__lecture--img"
+          >
+
+          <div class="events__lecture--description">
+            <div class="events__lecture--date">
+              26/08/2019 - 11:00
+            </div>
+
+            <h3 class="events__lecture--title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="gallery__container">
+          <div class="gallery__content">
+            <h2 class="gallery__title">
+              Галерея
+            </h2>
+
+            <div class="gallery__paintings">
+              <div class="gallery__paintings--place gallery__paintings--place-1">
+                <img
+                  src="../src/images/photos/gallery_1.jpg"
+                  alt="NAMU"
+                  class="gallery__img gallery__img--1"
+                >
+
+                <img
+                  src="../src/images/photos/gallery_2.jpg"
+                  alt="NAMU"
+                  class="gallery__img gallery__img--2"
+                >
+
+                <img
+                  src="../src/images/photos/gallery_3.jpg"
+                  alt="NAMU"
+                  class="gallery__img gallery__img--3"
+                >
+              </div>
+
+              <div class="gallery__paintings--place gallery__paintings--place-2">
+                <img
+                  src="../src/images/photos/gallery_4.jpg"
+                  alt="NAMU"
+                  class="gallery__img gallery__img--4"
+                >
+
+                <img
+                  src="../src/images/photos/gallery_5.jpg"
+                  alt="NAMU"
+                  class="gallery__img gallery__img--5"
+                >
+              </div>
+            </div>
+
+            <div class="gallery__slider">
+              <a href="#" class="gallery__slider--item"></a>
+              <a href="#" class="gallery__slider--item"></a>
+              <a href="#" class="gallery__slider--item"></a>
+              <a href="#" class="gallery__slider--item"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="about-us">
+        <div class="subscription__container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">
+              Підписка
+            </h2>
+            <div class="subscription__subtitle">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </div>
+            <form 
+              action="#" 
+              method="get" 
+              class="subscription__form form"
+            >
+
+              <input
+                name="email"
+                type="email"
+                placeholder="E-mail"
+                class="subscription__form--field"
+                required
+              >
+
+              <button class="subscription__button"></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__container">
+        <div class="footer__content">
+          <div class="footer__logo-and-social">
+            <a href="#" class="footer__logo">
+              NA
+              <br>
+              MU
+            </a>
+
+            <div class="footer__social">
+              <a 
+                href="#" class="footer__social--logo"
+                target="_blank"
+              >
+                <svg 
+                  width="12" 
+                  height="24" 
+                  viewBox="0 0 12 24" 
+                  fill="black" 
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M2.80721 4.64902C2.80721 5.25383 2.80721 7.95334 2.80721 7.95334H0.390137V11.9939H2.80721V24.0009H7.77238V11.9942H11.1042C11.1042 11.9942 11.4163 10.0568 11.5675 7.93844C11.1339 7.93844 7.79116 7.93844 7.79116 7.93844C7.79116 7.93844 7.79116 5.58779 7.79116 5.17577C7.79116 4.76285 8.33251 4.20743 8.86757 4.20743C9.40163 4.20743 10.5288 4.20743 11.5728 4.20743C11.5728 3.6573 11.5728 1.7565 11.5728 0.00100709C10.1791 0.00100709 8.59352 0.00100709 7.89462 0.00100709C2.68447 0.000728099 2.80721 4.04527 2.80721 4.64902Z">
+                </svg>
+              </a>
+
+              <a 
+                href="#"
+                class="footer__social--logo"
+                target="_blank"
+              >
+                <svg
+                  width="25"
+                  height="24"
+                  viewBox="0 0 25 24"
+                  fill="black"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M18.4658 0H7.45897C3.8767 0 0.962402 2.9143 0.962402 6.49657V17.5036C0.962402 21.0857 3.8767 24 7.45897 24H18.466C22.0481 24 24.9624 21.0857 24.9624 17.5036V6.49657C24.9624 2.9143 22.0481 0 18.4658 0V0ZM12.9624 18.5623C9.34386 18.5623 6.40007 15.6185 6.40007 12C6.40007 8.38145 9.34386 5.43767 12.9624 5.43767C16.5809 5.43767 19.5247 8.38145 19.5247 12C19.5247 15.6185 16.5809 18.5623 12.9624 18.5623ZM19.6816 6.98528C18.6123 6.98528 17.7425 6.11553 17.7425 5.04619C17.7425 3.97686 18.6123 3.10693 19.6816 3.10693C20.7509 3.10693 21.6209 3.97686 21.6209 5.04619C21.6209 6.11553 20.7509 6.98528 19.6816 6.98528Z">
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__work-schedule">
+            <h4 class="footer__work-schedule--title">
+              Графік роботи
+            </h4>
+
+            <div class="footer__work-schedule--container">
+              <div class="footer__work-schedule--time">
+                <strong>12:00 — 20:00</strong> середа<br> 
+                <strong>12:00 — 20:00</strong> четвер<br>
+                <strong>12:00 — 20:00</strong> п’ятниця<br>
+                <strong>11:00 — 19:00</strong> субота<br>
+                <strong>11:00 — 19:00</strong> неділя<br>
+                <br>
+                <strong>Вихідні:</strong> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__contacts">
+            <h4 class="footer__contacts--title">
+              Контакти:
+            </h4>
+
+            <div class="footer__contacts--addresses">
+              <a 
+                class="footer__contacts--addresses" 
+                href="http://goo.gl/maps/BCXVj9VrKofdFYz89" 
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a><br>
+
+              <a 
+                class="footer__contacts--addresses"
+                href="tel:+380442781357"
+              >
+                тел. +38 (044) 278-13-57
+              </a><br>
+
+              <a 
+                class="footer__contacts--addresses"
+                href="tel:+380442781357"
+              >
+                факс +38 (044) 278-74-54
+              </a><br>
+
+              <a href="mailto:info@namu.kiev.ua" class="footer__contacts--addresses">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+
+          <a href="#home" class="footer__home-arrow">
+            <svg 
+              width="10" 
+              height="12" 
+              viewBox="0 0 10 12" 
+              fill="#1a5a4c" 
+              xmlns="http://www.w3.org/2000/svg"
+              class="footer__home-arrow--svg logo"
+            >
+              <path d="M5 0L0 5L0.705 5.705L4.5 1.915V12H5.5V1.915L9.295 5.705L10 5L5 0Z">
+            </svg>
+          </a>
+
+          <div class="footer__decoration"></div>
+
+          <ul class="footer__menu-list">
+            <li class="footer__menu-item">
+              <a href="#gallery" class="footer__menu-link">Галерея</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#about-us" class="footer__menu-link">Про Нас</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#exhibitions" class="footer__menu-link">Виставки та події</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="#contacts" class="footer__menu-link">Контакти</a>
+            </li>
+          </ul>
+
+          <div class="footer__designed-by">
+            <div class="footer__designed-by--item">
+              Copyright © 2022. All Rights Reserved.
+            </div>
+
+            <div class="footer__designed-by--item">
+              Designed by Zhyriada Marina
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
