--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
     </header>
 
     <main>
-      <section class="page__museum museum" id="museum">
+      <section class="museum page__museum" id="museum">
         <div class="container__museum">
           <picture class="museum__picture">
             <source media="(min-width: 1280px)" srcset="./images/museum-lap.png">
@@ -193,7 +193,7 @@
         </div>
       </section>
 
-      <section class="page__content page__gallery gallery" id="gallery">
+      <section class="gallery page__content page__gallery" id="gallery">
         <div class="gallery__title">
           Галерея
         </div>
@@ -424,9 +424,6 @@
       </div>
     </footer>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script> -->
-    <!-- <script type="text/javascript" src="/scripts/slick.min.js"></script> -->
-    <!-- <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
