--- a/src/index.html
+++ b/src/index.html
@@ -372,25 +372,37 @@
           <br>
           <a
             href="https://goo.gl/maps/LHc1uuGg8T3ddgpQ6"
+            target="_blank"
             rel="noopener"
             class="footer__contacts-link"
          >
             вул. М. Грушевського, 6; Київ,
             <span class="span__break--tablet">01001</span>
           </a>
-          <a href="tel:+38 (044) 278-13-57" class="footer__contacts-link">
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="footer__contacts-link"
+            target="_blank"
+            rel="noopener"
+         >
             <span class="span__break--mobile span__break--tablet span__break--laptop">
               тел. +38 (044)
               <span class="span__break--mobile">278-13-57</span>
             </span>
           </a>
-          <a href="tel:+38 (044) 278-74-54" class="footer__contacts-link">
+          <a
+            href="tel:+38 (044) 278-74-54"
+            class="footer__contacts-link"
+         >
             <span class="span__break--tablet span__break--laptop">
             </span>факс +38 (044)
             <span class="span__break--mobile">278-74-54
             </span>
           </a>
-          <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+          <a
+            href="mailto:info@namu.kiev.ua"
+            class="footer__contacts-link"
+         >
             <span class="span__break--tablet span__break--laptop">
               e-mail:
               <span class="span__break--mobile">info@namu.kiev.ua</span>
