--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,10 @@
             <div class="events__event-name">
               Йду і повертаюсь
               <div class="events__event-name-dot">
-                <img src="./images/dot-orange.png" alt="dot">
+                <img
+                  src="./images/dot-orange.png"
+                  alt="dot" 
+                  class="events__dot">
               </div>
             </div>
             <p class="events__event-paragraph">
@@ -156,7 +159,10 @@
             <div class="events__event-name">
               І спогади і мрії
               <div class="events__event-name-dot">
-                <img src="./images/dot-orange.png" alt="dot">
+                <img
+                  src="./images/dot-orange.png"
+                  alt="dot"
+                  class="events__dot">
               </div>
             </div>
             <p class="events__event-paragraph">
