--- a/src/index.html
+++ b/src/index.html
@@ -313,7 +313,7 @@
               class="subscribe__input"
               placeholder="E-mail"
               required>
-            <button class="subscribe__button">
+            <button class="subscribe__button" type="button">
               <img src="./images/button-arrow.svg" alt="button">
             </button>
           </form>
@@ -327,9 +327,9 @@
           class="footer__logo logo--footer grid__item--1-1 grid__item--tablet-1-1 grid__item--footer grid__item--laptop-1-1"
           href="#"
        >
-            NA
+          NA
           <br>
-            MU
+          MU
         </a>
 
         <div class="footer__soc-media grid__item--2-2 grid__item--tablet-1-1 grid__item--laptop-1-1 grid__item--footer">
