commit #2. fixed bugs

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,11 @@
     <nav class="page__menu menu" id="menu">
       <div class="container menu__container">
         <div class="menu__top">
-          <a href="#" class="menu__top--cross-icon">
+          <a 
+            href="#" 
+            class="menu__top--cross-icon" 
+            id="close-menu"
+          >
             <img 
               src="./images/cross.svg" 
               alt="cross" 
