header and burger menu for mobile completed

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"
+          crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;600;700&family=Montserrat:wght@400;700&display=swap"
+                                                                                                                                         rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.jfif" type="image/x-icon">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="container">
+        <div class="header__nav">
+          <a href="#menu" class="header__menu-link">
+            <img src="/images/menu/menu-icon.svg"
+                 alt="menu button"
+                 class="header__menu-icon">
+          </a>
+
+          <div class="header__logo">NA<br>MU</div>
+        </div>
+      </div>
+    </header>
+    <nav class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__links">
+          <a href="index.html" class="menu__menu-link">
+            <img src="/images/menu/cross-icon.svg"
+                 alt="menu button"
+                 class="menu__close-icon">
+          </a>
+          <div class="menu__section-links">
+            <a href="" class="menu__section-link">Галерея</a>
+
+            <a href="" class="menu__section-link">Про Нас</a>
+
+            <a href="" class="menu__section-link">Виставка та події</a>
+
+            <a href="" class="menu__section-link">Контакти</a>
+          </div>
+        </div>
+        <div class="menu__schedule">
+          <p class="menu__paragraph">Графік роботи</p>
+          <br>
+          <p class="menu__paragraph">
+            <span class="menu__paragraph menu__paragraph--bold">12:00 — 20:00</span> середа
+          </p>
+          <p class="menu__paragraph">
+            <span class="menu__paragraph menu__paragraph--bold">12:00 — 20:00</span> четвер
+          </p>
+          <p class="menu__paragraph">
+            <span class="menu__paragraph menu__paragraph--bold">12:00 — 20:00</span> п'ятниця
+          </p>
+          <p class="menu__paragraph">
+            <span class="menu__paragraph menu__paragraph--bold">11:00 — 19:00</span> субота
+          </p>
+          <p class="menu__paragraph">
+            <span class="menu__paragraph menu__paragraph--bold">11:00 — 19:00</span> неділя
+          </p>
+          <br>
+          <p class='menu__paragraph'>
+            <span class="menu__paragraph menu__paragraph--bold">Вихідні:</span> понеділок,
+            вівторок <br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+
+        </div>
+      </div>
+    </nav>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
