--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="container menu__container">
+      <div class="container menu__container" id="menu__container">
         <div class="menu__top">
           <a 
             href="#" 
