--- a/src/index.html
+++ b/src/index.html
@@ -406,9 +406,9 @@
             <img src="./images/back-top-btn.svg" alt="back-to-top-btn">
           </a>
 
-          <div class="footer__stick grid__item--desktop--7-7">
+          <!-- <div class="footer__stick grid__item--desktop--7-7">
 
-          </div>
+          </div> -->
   
           <div class="footer__menu footer__menu--grid grid__item--tablet--2-5 grid__item--desktop--8-11">
             <a href="#galery" class="footer__menu--link animation-scale--10">
