--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
         <div class="header__content">
           <div class="header__top">
             <a href="#menu" class="icon icon--menu"></a>
-            <a href="/" class="logo">
+            <a href="#" class="logo">
               <img
                 class="logo__img"
                 src="./images/logo.png"
