--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua" class="page">
+<html lang="ua" class="page ">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -175,6 +175,7 @@
         </div>
       </div>
     </nav>
+    <div class="page__overlay"></div>
 
     <main>
       <div class="page__section events" id="events">
