fixed page reload on form submit

--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
     <div class="page__overlay"></div>
 
     <main>
-      <div class="page__section events" id="events">
+      <section class="page__section events" id="events">
         <div class="container">
           <h2 class="page__section-title">
             Актуальні події
@@ -279,9 +279,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="page__section gallery" id="gallery">
+      <section class="page__section gallery" id="gallery">
         <div class="container">
           <div class="page__section-title">
             Галерея
@@ -358,9 +358,9 @@
             <div class="swiper-pagination slider__pagination"></div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="page__section subscribe">
+      <section class="page__section subscribe">
         <div class="container">
           <div class="subscribe__container">
             <h2 class="subscribe__title">
@@ -387,7 +387,7 @@
             </form>
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="footer">
