fixed some links

--- a/src/index.html
+++ b/src/index.html
@@ -360,7 +360,7 @@
         </div>
       </section>
 
-      <section class="page__section subscribe">
+      <section class="page__section subscribe" id="subscribe-form">
         <div class="container">
           <div class="subscribe__container">
             <h2 class="subscribe__title">
@@ -370,7 +370,7 @@
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
 
-            <form class="subscribe__form" id="subscribe-form">
+            <form class="subscribe__form">
               <input
                 type="email"
                 id="input"
