--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,122 @@
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__half-1">
+        <div class="container">
+          <a href="#">
+            <h2 class="logo">
+              NA
+              <br>
+              MU
+            </h2>
+          </a>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="header__half-2">
+          <h1 class="header__title">
+            ХУДОЖНІЙ МУЗЕЙ
+          </h1>
+  
+          <a href="#tickets" class="button header__button">
+            <span class="button__title">
+              КВИТКИ
+            </span>
+
+            <div class="button__arrow">
+              <img
+                src="./images/icons/Arrow.svg"
+                alt="arrow"
+                class="button__arrow-img"
+              >
+            </div>
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <div class="container">
+        <div class="events">
+          <h2 class="events__title">
+            Актуальні події
+          </h2>
+
+          <div class="exhibition">
+            <img
+              src="./images/Rectangle-2.1.png"
+              alt="painting"
+              class="exhibition__img"
+            >
+
+            <div class="exhibition__box">
+              <span class="exhibition__box-type">
+                ВИСТАВКА
+              </span>
+
+              <span class="exhibition__box-date">
+                26.08-29.11.2019
+              </span>
+            </div>
+
+            <h3 class="exhibition__title">
+              Йду і повертаюсь
+            </h3>
+
+            <p class="exhibition__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+
+          <div class="exhibition">
+            <img src="./images/Rectangle-4.1.png"
+              alt="painting"
+              class="exhibition__img"
+            >
+
+            <div class="exhibition__box">
+              <span class="exhibition__box-type">
+                ВИСТАВКА
+              </span>
+
+              <span class="exhibition__box-date">
+                26.08-29.11.2019
+              </span>
+            </div>
+
+            <h3 class="exhibition__title">
+              І спогади і мрії
+            </h3>
+
+            <p class="exhibition__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="lecture">
+        <div class="lecture__container">
+          <div class="lecture__box">
+            <span class="lecture__box-type">
+              ЛЕКЦІЯ
+            </span>
+  
+            <span class="lecture__box-date">
+              26/08/2019 - 11:00
+            </span>
+          </div>
+  
+          <h3 class="lecture__title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
